Made it make jars

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,18 @@ javafx {
 	version = "12.0.1"
 	modules = [ 'javafx.controls', 'javafx.fxml']
 }
-
+version = '1.0'
+//makes a jar with dependencies
+task fatJar(type: Jar) {
+	manifest {
+		attributes 'Implementation-Title': 'Gradle Jar File' , 
+			'Implementation-Version': version, 
+			'Main-Class': 'automation/src/automation.FXGUI'
+	}
+	baseName = project.name + '-all'
+	from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+	with jar 
+}
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
