--- a/build.gradle
+++ b/build.gradle
@@ -23,13 +23,13 @@ version = '1.0'
 mainClassName = 'automation.FXGUI'
 //makes a jar with dependencies
 jar {
-	manifest {
-		attributes 'Implementation-Title': 'Gradle Jar File' , 
-			'Implementation-Version': version, 
-			'Main-Class': mainClassName
-	}
-	from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
-	with jar 
+    manifest {
+        attributes "Main-Class": mainClassName
+    }
+ 
+    from {
+        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 sourceSets.main {
     java {
