--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 before_install:
  - chmod +x gradlew
 script:
-  - gradlew clean build
+  - ./gradlew clean build
 cache:
   directories:
     - $HOME/.gradle
