--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ repositories {
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
     implementation 'com.google.guava:guava:27.0.1-jre'
-	implementation 'lc.kra.system:system-hook:3.3'
+	implementation 'com.1stleg:jnativehook:2.1.0'
 	implementation 'de.dynamicfiles.projects.gradle.plugins:javafx-gradle-plugin:8.8.2'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
